--- a/1 - Javascript básico/Excercises/Form JS/index.css
+++ b/1 - Javascript básico/Excercises/Form JS/index.css
@@ -8,8 +8,7 @@ body{
     padding-top: 50px;
     display: flex;
     justify-content: start;
-
-
+    background-attachment: fixed;
     background-image: linear-gradient(rgb(18, 18, 18), rgb(8, 8, 22));
     height: 100vh;
     width: 100%;
@@ -29,17 +28,16 @@ form{
 }
 
 input{
+    color: rgba(255, 255, 255, 0.276);
     display: block;
+    border: none;
 
     height: 30px;
     width: 200px;
     padding-inline: 10px;
 
-    background-color: rgb(255, 255, 255);
-    border: none;
-}
-input:focus{
-    border: none;
+    background-color: rgba(214, 211, 211, 0.154);
+    border-radius: 4px;
 }
 
 
@@ -53,11 +51,13 @@ label{
 #move{
     color: white;
     font-weight: 500;
-    transition: transform linear 100ms;
+    transition: transform linear 200ms;
 
 }
 
 input:focus{
+    border-bottom: .5px solid rgb(220, 216, 216);
+
     background-color: transparent;
     transition: background-color linear 200ms;
 
@@ -67,8 +67,10 @@ input:focus{
 
 
 input:focus + #move {
+    font-weight: 700;
+
     transform: translateX(33px);
-    transition: transform cubic-bezier(0.075, 0.82, 0.265, 2) 300ms;
+    transition: transform cubic-bezier(0.075, 0.82, 0.265, 2.5) 500ms, font-weight linear 100ms;
 }
 
 
