--- a/2 - Lógica de programação/Exercises/Form 2/assets/CSS/style.css
+++ b/2 - Lógica de programação/Exercises/Form 2/assets/CSS/style.css
@@ -2,6 +2,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: 'Noto Sans', sans-serif;
 }
 
 body{
@@ -15,13 +16,13 @@ body{
 }
 
 main{
-    background-color:antiquewhite;
+    border-radius: 8px;
+    background-color:rgb(245, 245, 245);
     width: 25%;
     height: fit-content;
 }
 
 form{
-    border: 1px solid red;
     padding: 10px;
 }
 legend{
@@ -31,26 +32,42 @@ legend{
 }
 
 fieldset{
-    border: 1px solid rgb(0, 255, 47);
     padding: 15px;
     display: flex;
     flex-direction: column;
-    gap: 30px;
+    gap: 35px;
     border: none;
     text-align: center;
 }
 label{
-    border: 1px solid blue;
     text-align: left;
+    display: flex;
+    flex-direction: column-reverse;
 }
 
 input{
+
     height: 35px;
     width: 100%;
     padding-left: 3px;
+    border-radius: 4px;
+    border: .5px solid rgba(0, 0, 0, 0.492);
 }
 
 .peso_altura{
+    margin-bottom: 3px;
     font-size: larger;
-    letter-spacing: 3px;
+    letter-spacing: 2px;
+    transition: transform 400ms cubic-bezier(0.075, 0.82, 0.165, 1.2);
+
+}
+
+input:focus{
+    outline: none;
+
+}
+
+input:focus + .peso_altura{
+    transform: translateX(45%);
+    transition: transform 300ms cubic-bezier(0.075, 0.82, 0.165, 1.2);
 }
