--- a/2 - Lógica de programação/Exercises/Form 2/assets/CSS/style.css
+++ b/2 - Lógica de programação/Exercises/Form 2/assets/CSS/style.css
@@ -16,12 +16,22 @@ body{
 }
 
 main{
+    display: grid;
+    grid-template-areas: 
+    "inf"
+    "capturar-inf";
+    justify-content: center;
     border-radius: 8px;
     background-color:rgb(245, 245, 245);
-    width: 25%;
+    width: 35%;
     height: fit-content;
 }
+section#informações-output{
+    grid-area: inf;
 
+} section#input{
+    grid-area: capturar-inf
+}
 form{
     padding: 10px;
 }
@@ -70,4 +80,11 @@ input:focus{
 input:focus + .peso_altura{
     transform: translateX(45%);
     transition: transform 300ms cubic-bezier(0.075, 0.82, 0.165, 1.2);
+}
+
+table{
+    border: 1px solid red;
+}
+th{
+    border: 1px solid red;
 }
