--- a/2 - Lógica de programação/Exercises/Form 2/assets/CSS/style.css
+++ b/2 - Lógica de programação/Exercises/Form 2/assets/CSS/style.css
@@ -4,42 +4,53 @@
     box-sizing: border-box;
     font-family: 'Noto Sans', sans-serif;
 }
+:root{
+    --section-titles: xx-large;
+    --section-titles-letter-spacing: 1.8px;
+    --section-titles-word-spacing: 3px;
+}
+section#informação-output{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
 
 body{
     height: 100vh;
     width: 100%;
     background-image: linear-gradient(to right,rgb(25, 25, 55), rgba(23, 23, 23, 0.963));
-
     display: flex;
     justify-content: center;
     align-items: top;
 }
 
+
+/* Ver informacoes e enviar informacoes */
+caption, legend{
+    margin-bottom: 15px;
+
+    font-size: var(--section-titles);
+    letter-spacing: var(--section-titles-letter-spacing);
+    word-spacing: var(--section-titles-word-spacing)
+}
+
 main{
-    display: grid;
-    grid-template-areas: 
-    "inf"
-    "capturar-inf";
+    padding-top: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
     justify-content: center;
     border-radius: 8px;
-    background-color:rgb(245, 245, 245);
+    background-color:rgb(255, 255, 255);
     width: 35%;
     height: fit-content;
 }
-section#informações-output{
-    grid-area: inf;
 
-} section#input{
-    grid-area: capturar-inf
-}
+
 form{
     padding: 10px;
 }
-legend{
-    font-size: xx-large;
-    letter-spacing: 1.8px;
-    word-spacing: 3px;
-}
+
 
 fieldset{
     padding: 15px;
@@ -49,20 +60,42 @@ fieldset{
     border: none;
     text-align: center;
 }
+
+
+
 label{
     text-align: left;
     display: flex;
     flex-direction: column-reverse;
 }
+table{
+    margin: auto;
+    letter-spacing: 2px;
+    word-spacing: 2.4px;
+    font-size: larger;
+    width: 65%;    
+}
+tbody th{
+    color: rgb(69, 67, 67);
+}
+th{
+    width: fit-content;
+    text-align: left;
+} tr{
+    width: fit-content;
+}
 
 input{
-
-    height: 35px;
+    height: 40px;
     width: 100%;
     padding-left: 3px;
     border-radius: 4px;
-    border: .5px solid rgba(0, 0, 0, 0.492);
+    border: .5px solid rgba(0, 0, 0, 0.307);
 }
+input[type=submit]{
+    height: 45px;
+}
+
 
 .peso_altura{
     margin-bottom: 3px;
@@ -72,19 +105,22 @@ input{
 
 }
 
-input:focus{
-    outline: none;
 
-}
 
+/* Animacoes - mover label & background em hover para calcular */
 input:focus + .peso_altura{
     transform: translateX(45%);
-    transition: transform 300ms cubic-bezier(0.075, 0.82, 0.165, 1.2);
+    transition: transform 350ms cubic-bezier(0.075, 0.82, 0.165, 1.2);
 }
 
-table{
-    border: 1px solid red;
+input[type=submit]:hover{
+    background-color: rgb(241, 65, 115);
+    transition: background-color 200ms cubic-bezier(0.6, -0.28, 0.735, 0.045) ;
 }
-th{
-    border: 1px solid red;
+
+
+/* Removendo conteudo não desejado */
+input:focus{
+    outline: none;
+    background-color: transparent;
 }
