--- a/2 - Lógica de programação/Exercises/People-info/assets/style.css
+++ b/2 - Lógica de programação/Exercises/People-info/assets/style.css
@@ -7,13 +7,20 @@ body{
     width: 100%;
     height: 100vh;
     background-image: linear-gradient(black, rgb(26, 26, 53));
-    padding: 15px 0 0 20px;
+    padding: 15px 0 14px 20px;
+    background-attachment: fixed;
+}
+
+form{
+    display: flex;
+    flex-direction: column;
+    gap: 80px;
 }
 
 label{
     display: flex;
     flex-direction: column-reverse;
-    gap: 4px;
+    gap: 2.5px;
     color: aliceblue;
     width: 25%;
     font-size: xx-large;
@@ -21,7 +28,8 @@ label{
 }
 
 input:focus{
-    outline: none;  
+    outline: none; 
+    background-color: rgba(255, 255, 255, 0.165); 
 
 }
 span{
@@ -44,4 +52,21 @@ input{
     width: 100%;
     color: red;
     font-size: large;
+}
+button{
+    width: 25%;
+    height: 43px;
+    border: none;
+    transition: background-color 130ms linear;
+    font-size: larger;
+    letter-spacing: 3px;
+
+}
+
+button:hover{
+    background-color: rgb(238, 26, 76);
+    transition: background-color 130ms cubic-bezier(0.23, 1, 2.320, 3);
+    
+    /* transition: transform linear 100ms; */
+    /* transform: translateX(40px); */
 }
