--- a/2 - Lógica de programação/Exercises/People-info/assets/style.css
+++ b/2 - Lógica de programação/Exercises/People-info/assets/style.css
@@ -70,3 +70,16 @@ button:hover{
     /* transition: transform linear 100ms; */
     /* transform: translateX(40px); */
 }
+
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
