--- a/2 - Lógica de programação/Exercises/People-info/assets/style.css
+++ b/2 - Lógica de programação/Exercises/People-info/assets/style.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
 }
+
 body{
     width: 100%;
     height: 100vh;
@@ -71,6 +72,11 @@ button:hover{
     /* transform: translateX(40px); */
 }
 
+
+
+
+
+/* Remove arrow from type number (input) */
 
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
