--- a/2 - Lógica de programação/Exercises/People-info/assets/style.css
+++ b/2 - Lógica de programação/Exercises/People-info/assets/style.css
@@ -51,7 +51,7 @@ input{
     outline: none;
     height: 30px;
     width: 100%;
-    color: red;
+    color: rgb(84, 80, 80);
     font-size: large;
 }
 button{
