--- a/2 - Lógica de programação/Exercises/People-info/assets/style.css
+++ b/2 - Lógica de programação/Exercises/People-info/assets/style.css
@@ -33,11 +33,9 @@ label{
 input:focus{
     outline: none; 
     background-color: rgba(255, 255, 255, 0.165); 
-
 }
 span{
     transition: transform 500ms cubic-bezier(0.175, 0.885, 0.32, 1);
-
 }
 label input:focus + span{
     transform: translateX(45%);
@@ -78,7 +76,7 @@ button:hover{
 
 
 
-/* Remove arrow from type number (input) */
+/* Remove as flechasfrom type number (input) */
 
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
