--- a/2 - Lógica de programação/Exercises/People-info/assets/style.css
+++ b/2 - Lógica de programação/Exercises/People-info/assets/style.css
@@ -76,7 +76,7 @@ button:hover{
 
 
 
-/* Remove as flechas que o 'input type number'  */
+/* Remove as flechas que o 'input type number' coloca */
 
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
