--- a/2 - Lógica de programação/Exercises/Today-s date/assets/CSS/style.css
+++ b/2 - Lógica de programação/Exercises/Today-s date/assets/CSS/style.css
@@ -6,5 +6,8 @@
 }
 
 body{
-    background-color: red;
+    height: 100vh;
+    width: 100vh;
+    background-image: linear-gradient(to right,rgb(16, 15, 15), rgb(28, 28, 69), rgba(18, 25, 59, 0.999)); 
 }
+
