--- a/2 - Lógica de programação/Exercises/Today-s date/assets/CSS/style.css
+++ b/2 - Lógica de programação/Exercises/Today-s date/assets/CSS/style.css
@@ -7,7 +7,14 @@
 
 body{
     height: 100vh;
-    width: 100vh;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-image: linear-gradient(to right,rgb(16, 15, 15), rgb(28, 28, 69), rgba(18, 25, 59, 0.999)); 
 }
 
+h1{
+    color: white;
+    font-size: xx-large;
+}
