--- a/2 - Lógica de programação/Exercises/Today-s date/assets/CSS/style.css
+++ b/2 - Lógica de programação/Exercises/Today-s date/assets/CSS/style.css
@@ -14,7 +14,14 @@ body{
     background-image: linear-gradient(to right,rgb(16, 15, 15), rgb(28, 28, 69), rgba(18, 25, 59, 0.999)); 
 }
 
+section{
+    background-color: rgba(255, 255, 255, 0.757);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 h1{
+    text-align: center;
     color: white;
-    font-size: xx-large;
+    font-size: 26px;
 }
