--- a/2 - Lógica de programação/Exercises/Today-s date/assets/CSS/style.css
+++ b/2 - Lógica de programação/Exercises/Today-s date/assets/CSS/style.css
@@ -15,13 +15,17 @@ body{
 }
 
 section{
-    background-color: rgba(255, 255, 255, 0.757);
+    background-color: rgba(0, 0, 0, 0.268);
+    padding: 40px;
+    border-radius: 12px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 h1{
+    filter:drop-shadow();
+
     text-align: center;
-    color: white;
-    font-size: 26px;
+    color: rgb(255, 255, 255);
+    font-size: 42px;
 }
