--- a/2 - Lógica de programação/Exercises/For - Using DOM/assets/index.css
+++ b/2 - Lógica de programação/Exercises/For - Using DOM/assets/index.css
@@ -8,5 +8,20 @@ body{
     height: 100vh;
     width: 100%; 
     background-repeat: no-repeat;
-    background-image: linear-gradient(rgb(52rgb(28, 28, 48) 76), black)
+    background-image: linear-gradient(rgb(38, 38, 55), rgb(25, 25, 54));
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+section{
+    width: 60%;
+    height: 65%;
+    border-radius: 17px;
+    background-color: rgba(255, 255, 255, 0.925);
+    padding-left: 41px;
+    padding-top: 50px;
+    letter-spacing: 1.3px;
+    font-size: 32px;
 }
