--- a/2 - Lógica de programação/Exercises/For - Using DOM 2/assets/index.css
+++ b/2 - Lógica de programação/Exercises/For - Using DOM 2/assets/index.css
@@ -33,6 +33,8 @@ ul{
     padding-top: 3px;
     width: 100%;
     height: fit-content;
+    display: flex;
+    flex-direction: column;
 }
 
 @keyframes appear{
